Remove port mapping from Docker run command
Updated Docker run command to remove port mapping.

--- a/terraformfiles/ansiblebook.yml
+++ b/terraformfiles/ansiblebook.yml
@@ -13,4 +13,4 @@
     command : sudo systemctl start docker
 
   - name: Deploy Docker Container
-    command: docker run -itd -p 3000:3001 santhoshky/zomatoapp:1.0
+    command: docker run -itd santhoshky/zomatoapp:1.0
