--- a/terraformfiles/ansiblebook.yml
+++ b/terraformfiles/ansiblebook.yml
@@ -13,4 +13,4 @@
     command : sudo systemctl start docker
 
   - name: Deploy Docker Container
-    command: docker run -d --name zomato -p 3000:3000 santhoshky/zomatoapp:1.0
+    command: docker run -d --name zomato -p 3000:3000 amala2025/zomatoapp:1.0
